Fixed a styling bug where all clicks anywhere in a field wrap causes the box shadow to show

--- a/assets/css/sass/admin.scss
+++ b/assets/css/sass/admin.scss
@@ -7,7 +7,7 @@
 			border-radius: 2px;
 			padding: 0.5em 2em;
 
-			&:active {
+			&.ui-sortable-helper {
 				box-shadow: 0 7px 7px -1px;
 			}
 		}
